3.59.1
======
8 July 2024
- Fix context cloning and Synchronized StepDefs for parallel outline examples

3.59.0
======
3 Jul 2024
- Introduce `Parallel` annotation on outline examples
  - Cannot be used in a nested manner (an error will be raised on any such detection)
  - Effective only when Gwen is invoked without the `--parallel` option (i.e: when no other parallel execution is taking place). It will be implicitly removed otherwise.
- Added implicit value `gwen.feature.language` 

3.58.2
======
24 Jun 2024
- Add implicit values for capturing evaluation duration in seconds
  - `gwen.eval.duration.secs` - the formatted duration (eg: 23s)

3.58.1
======
22 Jun 2024
- Fix implicit duration values for scenario level state

3.58.0
======
22 Jun 2024
- Add implicit values for capturing evaluation duration
  - `gwen.eval.duration` - the formatted duration (eg: 1s 234ms)
  - `gwen.eval.duration.msecs` - the duration in milliseconds (eg: 1234)

3.57.1
======
19 Jun 2024
- Fix ordering of x is "y" DSL

3.57.0
======
18 Jun 2024
- Add `@Masked` annotation to mask dynamically evaluated data bound by the following DSLs. If specified, then returned data will be masked in all logs and outputs.
  - `<name> is defined by <javascript|js> "<expression>"`
  - `<name> is defined by <javascriptRef> applied to "<argument>"`
  - `<name> is defined by <javascriptRef> applied to "<arguments>" delimited by "<delimiter>"`
  - `<name> is defined by system process "<process>"`
  - `<name> is defined by system process "<process>" delimited by "<delimiter>"`
  - `<name> is defined by unix system process "<process>"`
  - `<name> is defined by the <text|node|nodeset> in <xmlRef> by xpath "<expression>"`
  - `<name> is defined in <textRef> by regex "<expression>"`
  - `<name> is defined in <jsonRef> by json path "<expression>"`
  - `<name> is defined in the <dbName> database by sql "<selectStmt>"`

3.56.0
======
13 Jun 2024
- Json data bindings for nested array loops